# react-tauri-video-editor

./: .env.example  .gitignore  AGENTS.md  MasterPlan.md  TODO.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/agents/: code-review.agent.md
.github/instructions/: backend.instructions.md  charts.instructions.md  docs.instructions.md  tables.instructions.md  ui.instructions.md
.github/prompts/: app-layout.prompt.md  new-command.prompt.md  new-route.prompt.md
.github/skills/ffmpeg-integration/: SKILL.md
.github/skills/react-best-practices/: SKILL.md
.github/skills/rust-skills/: SKILL.md
.github/skills/tauri-backend/: SKILL.md
.github/skills/timeline-editor/: SKILL.md
.github/skills/ui-conventions/: SKILL.md
.github/workflows/: release.yml
scripts/: download-ffmpeg.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: asset.rs  common.rs  ffmpeg.rs  mod.rs  project.rs
src/components/: AppLoader.tsx  AppThemeProvider.tsx  EditorLayout.tsx
src/components/assets/: AssetPanel.tsx
src/components/common/: LayoutResizer.tsx  ResizableDialog.tsx
src/lib/: errors.ts  invoke.ts  storageKeys.ts  useGlobalShortcuts.ts  useStickyState.ts  withHistory.ts
src/routes/: __root.tsx  index.tsx  settings.tsx
src/store/: assetStore.ts  historyStore.ts  projectStore.ts  settingsStore.ts  timelineStore.ts  toolStore.ts
(+9 files in other folders)
